# python-project-blueprint

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: api.puml  architecture.md  architecture.puml  flow.md  flow.puml
scripts/: init_docker_dirs.sh
src/python_project_blueprint/: __main__.py  app.py  entrypoints.py  identity.py
src/python_project_blueprint/api/: api.py  session.py
src/python_project_blueprint/cli/: cli.py  clieventhandler.py  cliparser.py  parsecli.py
src/python_project_blueprint/commands/: buildcommands.py  commands.py  frontendcommandinput.py
src/python_project_blueprint/config/: config.py
src/python_project_blueprint/events/: events.py
src/python_project_blueprint/handlers/: commandhandler.py  displayversionhandler.py  handledisplayversion.py
src/python_project_blueprint/runtime/: buildruntime.py  logruntime.py  parsedinput.py  readmetadata.py  runtime.py  runtimeoverrides.py  runtimesettings.py
src/python_project_blueprint/runtime/envs/: .env.example  entrypoint.py  loadenvs.py
src/python_project_blueprint/utils/: utils.py
src/python_project_blueprint/utils/logging/: logruntime.py  (+2 more)
tests/: test_api.py  test_app.py  test_buildcommands.py  test_buildruntime.py  test_cli.py  test_clieventhandler.py  test_cliparser.py  test_config.py  test_displayversionhandler.py  test_entrypoints.py  test_logruntime.py  test_main.py  test_paths.py  test_readmetadata.py  test_runtimesettings.py  test_setuplogging.py  test_utils.py
(+3 files in other folders)
