[project]
name = "python-project-blueprint"
version = "0.1.0"
description = "A blueprint for python project layouts"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
